# AI-Pulse_Dashboard

./: .coverage  .env.example  .gitignore  README.md  pyproject.toml
.kiro/specs/ai-intel-dashboard/: .config.kiro  design.md  requirements.md  tasks.md
backend/: logging_config.py  utils.py
backend/api/: dependencies.py  main.py
backend/api/routers/: articles.py  sources.py  trends.py
backend/classifier/: __init__.py  anthropic.py  base.py  classifier.py  openai.py  rule.py
backend/config/: config_loader.py
backend/models/: article.py
backend/normalizer/: normalizer.py
backend/pipeline/: pipeline.py  scheduler.py
backend/scraper/: __main__.py  arxiv.py  base.py  huggingface.py  rss.py
backend/storage/: storage_layer.py
config/: feeds.yaml
docs/: playbook.md
docs/adr/: 001-project-structure.md  002-data-pipeline.md  003-llm-classification.md  004-rest-api.md  005-frontend-architecture.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  api.ts  types.ts
frontend/src/components/: ArticleTable.css  ArticleTable.test.tsx  (+12 more)
tests/integration/: test_api.py
tests/property/: test_property_article.py  test_property_config.py  test_property_logging.py  test_property_normalizer.py  test_property_pipeline.py  test_property_scraper.py  test_property_storage.py
tests/unit/: test_article.py  test_arxiv_scraper.py  test_classifier.py  test_cli.py  test_config_loader.py  test_huggingface_scraper.py  test_logging_config.py  test_normalizer.py  test_rss_scraper.py  test_storage.py
(+5 files in other folders)
