[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "ai-intel-dashboard"
version = "0.1.0"
description = "AI Intelligence Dashboard — Sprint 1 backend data pipeline"
requires-python = ">=3.11"
dependencies = [
    "feedparser==6.0.11",
    "httpx==0.27.0",
    "tenacity==8.5.0",
    "python-dateutil==2.9.0",
    "pydantic-settings==2.3.4",
    "apscheduler==3.10.4",
    "sqlalchemy==2.0.31",
    "pyyaml==6.0.2",
    "pydantic==2.8.2",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "hypothesis==6.108.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=backend --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend"]
omit = ["backend/classifier/*"]

[tool.coverage.report]
fail_under = 80
